fix stat.R output path

--- a/src/stat.org
+++ b/src/stat.org
@@ -174,7 +174,7 @@ Visulize external uniformity value (\(U\)) of the selected examples.
              hjust = 'left',
              label = paste(df.ex$period_a_dist,rep('→',19),df.ex$period_b_dist))
 
-  ff %>% ggsave(filename = "../artifact/fig/ex_value.svg", width=15, height=7)
+  ff %>% ggsave(filename = "../artifact/ex_value.svg", width=15, height=7)
   ff
 #+END_SRC
 
